# Iris-flower-prediction

./: .ipynb  README.md  app1.py  code-03.py  code-13.ipynb  pyproject.toml
Persistence/: knn_model.sav  label_encoder.sav  scaler_features.sav
