[tool.poetry]
name = "slr"
version = "0.1.0"
description = ""
authors = ["Ziloeuvre <mumtazzilwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
requests = "^2.31.0"
streamlit = "^1.32.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
